external-resources/internal-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ip-service
  namespace: ingress-basic
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.224.0.88
  ports:
  - port: 80
