external-resources/test-deployment-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ip-service
  namespace: mqb-virtual-consultance-prb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.224.0.88
  ports:
  - port: 80
  selector:
    app: external-ip-service
