external-resources/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: analisis
  name: analisis
  namespace: mqb-virtual-consultance-prb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: analisis
  template:
    metadata:
      labels:
        app: analisis
    spec:     
      containers:
      - name : analisis
        image: acrmvirtualconsultive.azurecr.io/mqbconsultiveanalisisprb:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "256Mi"
        ports:
        - containerPort: 8095         
      imagePullSecrets:
        - name: acrmvirtualconsultive  
---
apiVersion: v1
kind: Service
metadata:
  name: analisis
  namespace: mqb-virtual-consultance-prb
  labels:
    app: analisis
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8095
  selector:
    app: analisis

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analisis-ingress
  namespace: mqb-virtual-consultance-prb
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-response-header: "Access-Control-Allow-Origin: https://masquebella.com.co"
    nginx.ingress.kubernetes.io/cors-allow-methods: "POST"
    cert-manager.io/cluster-issuer: letsencrypt-prod 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - masquebellabackend.barberiaadn.xyz
    secretName: test-tls
  rules:
    - host: masquebellabackend.barberiaadn.xyz
      http:
        paths:
        - path: /virtual-consultive(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: analisis
              port:
                number: 8095
